# global-skill-executor

./: .gitignore  README.md  pyproject.toml
gskill/: __init__.py  cli.py  discovery.py  history.py  local_workflow.py  models.py  providers.py  registry.py  repo_scan.py  runners.py  selection.py  ui.py
