[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gskill"
version = "0.1.0"
description = "Global Skill Executor — discover and run AI-assistant skills from anywhere"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
gskill = "gskill.cli:main"

[tool.setuptools]
packages = ["gskill"]
